--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ main {
 }
 
 .profile-picture {
-  width: 96px;
-  height: 96px;
+  width: 100px;
+  height: 100px;
   border-radius: 96px;
   border: 5px solid #fff;
 }
@@ -88,6 +88,7 @@ main {
 }
 
 .following p {
+  color: #6b7082;
   font-size: 0.625rem;
   font-weight: 400;
   letter-spacing: 0.09375rem;
